--- a/include/config.h.in
+++ b/include/config.h.in
@@ -66,3 +66,6 @@
 #undef CONFIG_SND_HAVE_CLASS_SIMPLE
 #undef CONFIG_CREATE_WORKQUEUE_FLAGS
 #undef CONFIG_HAVE_REGISTER_SOUND_SPECIAL_DEVICE
+
+/* 2.6 kernel */
+#undef CONFIG_SND_NESTED_CLASS_DEVICE
