--- a/include/config.h.in
+++ b/include/config.h.in
@@ -70,3 +70,4 @@
 /* 2.6 kernel */
 #undef CONFIG_SND_NESTED_CLASS_DEVICE
 #undef CONFIG_SND_OLD_DRIVER_SUSPEND
+#undef CONFIG_SND_REMOVE_PAGE_RESERVE
