--- a/configure.in
+++ b/configure.in
@@ -612,7 +612,7 @@ struct bus_type {
 };
 #endif
 ])
-CHECK_KERNEL_HEADER(linux/platform_device.h, [#include <linux/device.h>
+CHECK_KERNEL_HEADER(linux/platform_device.h, [#include \"platform_device_compat.h\"
 ])
 CHECK_KERNEL_HEADER(linux/jiffies.h, [#include <linux/sched.h>
 #include <linux/delay.h>
