--- a/include/config.h.in
+++ b/include/config.h.in
@@ -71,3 +71,4 @@
 #undef CONFIG_SND_NESTED_CLASS_DEVICE
 #undef CONFIG_SND_OLD_DRIVER_SUSPEND
 #undef CONFIG_SND_REMOVE_PAGE_RESERVE
+#undef CONFIG_HAVE_PNP_SUSPEND
