--- a/configure.in
+++ b/configure.in
@@ -631,6 +631,8 @@ CHECK_KERNEL_HEADER(linux/firmware.h, [#include \"firmware_compat.h\"
 ])
 CHECK_KERNEL_HEADER(linux/err.h, [#include \"err_compat.h\"
 ])
+CHECK_KERNEL_HEADER(linux/bitmap.h, [#include \"bitmap_compat.h\"
+])
 
 dnl Check for dump_stack
 if test "$kversion.$kpatchlevel" = "2.6"; then
