--- a/configure.in
+++ b/configure.in
@@ -2185,6 +2185,20 @@ CONFIG_SND_HPET=""
 AC_SUBST(CONFIG_SND_HPET)
 AC_SUBST(CONFIG_HPET)
 
+dnl Check for dynamic minors...
+AC_MSG_CHECKING(for dynamic minor numbers)
+AC_ARG_ENABLE(dynamic-minors,
+  AS_HELP_STRING([--enable-dynamic-minors],
+		 [enable dynamic minor numbers for device files (requires udev or devfs)]),
+  [dynamic_minors="$enableval"], [dynamic_minors="no"])
+if test "$dynamic_minors" = "yes"; then
+  CONFIG_SND_DYNAMIC_MINORS=y
+  AC_DEFINE(CONFIG_SND_DYNAMIC_MINORS)
+  AC_MSG_RESULT(yes)
+else
+  AC_MSG_RESULT(no)
+fi
+
 dnl Check for procfs
 CHECK_KERNEL_CONFIG(CONFIG_PROC_FS, [Procfs support])
 AC_SUBST(CONFIG_PROC_FS)
