--- a/include/autoconf-extra.h.in
+++ b/include/autoconf-extra.h.in
@@ -11,6 +11,7 @@
 #undef CONFIG_SND_MIXER_OSS_MODULE
 #undef CONFIG_SND_PCM_OSS_MODULE
 #undef CONFIG_SND_SEQUENCER_OSS
+#undef CONFIG_SND_DYNAMIC_MINORS
 #undef CONFIG_SND_DEBUG
 #undef CONFIG_SND_DEBUG_MEMORY
 #undef CONFIG_SND_DEBUG_FULL
