pcm - Make the support of old API selectable
Make the support of old API selectable via config option.

--- a/include/config.h.in
+++ b/include/config.h.in
@@ -11,6 +11,7 @@
 #undef CONFIG_SND_MIXER_OSS_MODULE
 #undef CONFIG_SND_PCM_OSS_MODULE
 #undef CONFIG_SND_SEQUENCER_OSS
+#undef CONFIG_SND_SUPPORT_OLD_API
 #undef CONFIG_SND_VERBOSE_PRINTK
 #undef CONFIG_SND_DYNAMIC_MINORS
 #undef CONFIG_SND_DEBUG
