--- a/configure.in
+++ b/configure.in
@@ -2199,6 +2199,19 @@ else
   AC_MSG_RESULT(no)
 fi
 
+dnl Check for support of old API...
+AC_MSG_CHECKING(for support of old API)
+AC_ARG_ENABLE(old-api,
+  AS_HELP_STRING([--disable-old-api],
+		 [Disable the support old ALSA PCM API (ver.0.9.0rc3 or older)]),
+  [support_old_api="$enableval"], [support_old_api="yes"])
+if test "$support_old_api" = "yes"; then
+  AC_DEFINE(CONFIG_SND_SUPPORT_OLD_API)
+  AC_MSG_RESULT(yes)
+else
+  AC_MSG_RESULT(no)
+fi
+
 dnl Check for procfs
 CHECK_KERNEL_CONFIG(CONFIG_PROC_FS, [Procfs support])
 AC_SUBST(CONFIG_PROC_FS)
