PXA2xx i2Sound: support for Intel PXA2xx I2S audio.
Support for Intel PXA2xx I2S audio.

Signed-off-by: Giorgio Padrin <giorgio@mandarinlogiq.org>

--- a/arm/Kconfig
+++ b/arm/Kconfig
@@ -10,4 +10,8 @@ config SND_S3C2410
 	  Say Y here if you want to use the inbuilt audio controller
 	  on the S3C2410 or S3C2440
 
+config SND_PXA2xx_I2SOUND
+	tristate
+	select SND_PCM
+
 endmenu
