Move PCXHR driver to alsa-kernel
Moved PCXHR driver to alsa-kernel.

--- a/pci/pcxhr/Makefile
+++ b/pci/pcxhr/Makefile
@@ -5,8 +5,6 @@ endif
 include $(SND_TOPDIR)/toplevel.config
 include $(SND_TOPDIR)/Makefile.conf
 
-snd-pcxhr-objs := pcxhr.o pcxhr_hwdep.o pcxhr_mixer.o pcxhr_core.o
-
-obj-$(CONFIG_SND_PCXHR) += snd-pcxhr.o
+include $(SND_TOPDIR)/alsa-kernel/pci/pcxhr/Makefile
 
 include $(SND_TOPDIR)/Rules.make
