Fix configure for 2.6.15-git
Fix the detection of some kernel functions in configure for 2.6.15-git kernel
tree.  We need to define a dummy KBUILD_BASENAME as a workaround.

--- a/configure.in
+++ b/configure.in
@@ -1244,7 +1244,7 @@ else
 fi
 AC_SUBST(msmp)
 
-KERNEL_CHECK_CFLAGS="-Wall -fno-strict-aliasing $CFLAGS $KERNEL_INC $HACK_KERNEL_INC -nostdinc -iwithprefix include"
+KERNEL_CHECK_CFLAGS="-Wall -fno-strict-aliasing $CFLAGS $KERNEL_INC $HACK_KERNEL_INC -nostdinc -iwithprefix include -DKBUILD_BASENAME=\"dummy\""
 
 dnl Check for video device support... (2.2 kernels excluded due to API incompatibility)
 if test $kpatchlevel -gt 2; then
