Added AMD cs5536 audio
Added AMD cs5536 audio.

--- a/include/pci_ids_compat.h.in
+++ b/include/pci_ids_compat.h.in
@@ -290,6 +290,12 @@
 #ifndef PCI_DEVICE_ID_NS_CS5535_AUDIO
 #define PCI_DEVICE_ID_NS_CS5535_AUDIO	0x002e
 #endif
+#ifndef PCI_VENDOR_ID_AMD
+#define PCI_VENDOR_ID_AMD		0x1022
+#endif
+#ifndef PCI_DEVICE_ID_AMD_CS5536_AUDIO
+#define PCI_DEVICE_ID_AMD_CS5536_AUDIO	0x2093
+#endif
 
 /* emu10k1 */
 #ifndef PCI_VENDOR_ID_CREATIVE
