--- a/configure.in
+++ b/configure.in
@@ -699,6 +699,22 @@ AC_SUBST(modsubdir)
 AC_SUBST(moddir_tree)
 AC_MSG_RESULT($moddir)
 
+dnl Verbose procfs
+AC_MSG_CHECKING(for verbose procfs)
+AC_ARG_ENABLE(verbose-procfs,
+  [  --enable-verbose-procfs  enables verbose procfs],
+  verbose_printk="$enableval", verbose_printk="yes")
+case "$verbose_printk" in
+  yes)
+    CONFIG_SND_VERBOSE_PROCFS=y
+    AC_DEFINE(CONFIG_SND_VERBOSE_PROCFS)
+    AC_MSG_RESULT(on)
+    ;;
+  *)
+    AC_MSG_RESULT(off)
+    ;;
+esac
+
 dnl Verbose printk
 AC_MSG_CHECKING(for verbose printk)
 AC_ARG_ENABLE(verbose-printk,
@@ -2141,6 +2157,26 @@ if test "$CONFIG_SND_OSSEMUL" = "y"; then
   AC_MSG_RESULT(yes)
 else
   AC_MSG_RESULT(no)
+fi
+
+if test "$CONFIG_SND_OSSEMUL" = "y"; then
+
+dnl Check for OSS PCM plugin system inclusion...
+AC_MSG_CHECKING(for OSS PCM plugin system inclusion)
+AC_ARG_WITH(pcm-oss-plugins,
+  [  --with-pcm-oss-plugins=no,yes       driver will (not) be compiled with OSS PCM plugins],
+  ossemulplugins="$withval", ossemulplugins="yes")
+CONFIG_SND_PCM_OSS_PLUGINS=""
+if test "$ossemulplugins" = "yes"; then
+  CONFIG_SND_PCM_OSS_PLUGINS="y"
+fi
+if test "$CONFIG_SND_PCM_OSS_PLUGINS" = "y"; then
+  AC_DEFINE(CONFIG_SND_PCM_OSS_PLUGINS)
+  AC_MSG_RESULT(yes)
+else
+  AC_MSG_RESULT(no)
+fi
+
 fi
 
 dnl Check for RTC timer support...
