--- a/include/config.h.in
+++ b/include/config.h.in
@@ -10,8 +10,10 @@
 #undef CONFIG_SND_OSSEMUL
 #undef CONFIG_SND_MIXER_OSS_MODULE
 #undef CONFIG_SND_PCM_OSS_MODULE
+#undef CONFIG_SND_PCM_OSS_PLUGINS
 #undef CONFIG_SND_SEQUENCER_OSS
 #undef CONFIG_SND_SUPPORT_OLD_API
+#undef CONFIG_SND_VERBOSE_PROCFS
 #undef CONFIG_SND_VERBOSE_PRINTK
 #undef CONFIG_SND_DYNAMIC_MINORS
 #undef CONFIG_SND_DEBUG
