Add mutex.h wrapper
Add wrapper for the new linux/mutex.h.

--- a/configure.in
+++ b/configure.in
@@ -633,6 +633,8 @@ CHECK_KERNEL_HEADER(linux/err.h, [#include \"err_compat.h\"
 ])
 CHECK_KERNEL_HEADER(linux/bitmap.h, [#include \"bitmap_compat.h\"
 ])
+CHECK_KERNEL_HEADER(linux/mutex.h, [#include \"mutex_compat.h\"
+])
 
 dnl Check for dump_stack
 if test "$kversion.$kpatchlevel" = "2.6"; then
