--- a/ppc/Makefile
+++ b/ppc/Makefile
@@ -5,7 +5,7 @@ endif
 include $(SND_TOPDIR)/toplevel.config
 include $(SND_TOPDIR)/Makefile.conf
 
-clean-files := awacs.c beep.c pmac.c tumbler.c
+clean-files := awacs.c beep.c tumbler.c
 
 include $(SND_TOPDIR)/alsa-kernel/ppc/Makefile
 
@@ -15,5 +15,4 @@ include $(SND_TOPDIR)/Rules.make
 
 awacs.c: awacs.patch $(SND_TOPDIR)/alsa-kernel/ppc/awacs.c
 beep.c: beep.patch $(SND_TOPDIR)/alsa-kernel/ppc/beep.c
-pmac.c: pmac.patch $(SND_TOPDIR)/alsa-kernel/ppc/pmac.c
 tumbler.c: tumbler.patch $(SND_TOPDIR)/alsa-kernel/ppc/tumbler.c
